...
                                <constraints>
                                    <constraint firstAttribute="height" constant="200" id="2IR-H3-KOj"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3I2-Bf-n4j">
                                <rect key="frame" x="79.5" y="294" width="216" height="33"/>
                                <accessibility key="accessibilityConfiguration" identifier="Configuration.Edit"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <state key="normal" title="Edit Configuration Settings"/>
                                <connections>
                                    <segue destination="ZFx-xZ-Nf5" kind="presentation" identifier="editConfiguration" id="yLG-ga-XrU"/>
                                </connections>
                            </button>
...
            </objects>
            <point key="canvasLocation" x="1943.2" y="27.436281859070466"/>
        </scene>
        <!--Settings-->
        <scene sceneID="ahx-L6-0S4">
            <objects>
                <viewController title="Settings" id="6aO-o6-Twh" customClass="SettingsViewController" customModule="Configuration" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="lP9-EA-kyD">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="35" sectionFooterHeight="20" translatesA
                                <rect key="frame" x="1" y="65" width="373" height="558"/>
...
